# libmodbus_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  libmodbus.prf  libmodbus_cpp.prf  libmodbus_cpp.pri  libmodbus_cpp.pro  libmodbus_cpp_user_conf.pri  lxqmake.pri  user_conf.pri.template
libmodbus/: build_libmodbus.sh  libmodbus.prf  libmodbus.pri  libmodbus.pro
libmodbus/include/: config.h  config_linux.h  config_windows.h
libmodbus_cpp/: abstract_master.cpp  abstract_slave.cpp  abstract_slave.h  backend.cpp  backend.h  defs.h  factory.cpp  factory.h  global.cpp  global.h  libmodbus_cpp.prf  libmodbus_cpp.pri  libmodbus_cpp.pro  logger.h  mapping_wrapper.h  slave_rtu_backend.cpp  slave_rtu_backend.h  slave_tcp_backend.cpp  slave_tcp_backend.h
tests/: abstract_read_write_test.cpp  main.cpp  tcp_read_write_test.cpp  tcp_read_write_test.h  tests.pro
